fixed project references

--- a/samples/gles2_book/Common/esUtil_winrt.vcxproj
+++ b/samples/gles2_book/Common/esUtil_winrt.vcxproj
@@ -43,7 +43,7 @@
       <Private>false</Private>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
       <CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
-      <LinkLibraryDependencies>true</LinkLibraryDependencies>
+      <LinkLibraryDependencies>false</LinkLibraryDependencies>
       <UseLibraryDependencyInputs>false</UseLibraryDependencyInputs>
     </ProjectReference>
     <ProjectReference Include="..\..\..\src\libGLESv2\libGLESv2_winrt.vcxproj">
