--- a/src/compiler/preprocessor/preprocessor_phone.vcxproj
+++ b/src/compiler/preprocessor/preprocessor_phone.vcxproj
@@ -55,6 +55,12 @@
   <PropertyGroup>
     <GenerateManifest>false</GenerateManifest>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <IncludePath>$(WP80ToolSetPath)include;$(WindowsSDK_IncludePath);</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <IncludePath>$(WP80ToolSetPath)include;$(WindowsSDK_IncludePath);</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PreprocessorDefinitions>ANGLE_PLATFORM_WINRT;ANGLE_PLATFORM_WP8;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
