--- a/samples/RotatingCube/RotatingCube_phone.vcxproj
+++ b/samples/RotatingCube/RotatingCube_phone.vcxproj
@@ -122,10 +122,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BasicTimer.h" />
+    <ClInclude Include="CubeRenderer.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="RotatingCube.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CubeRenderer.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
